<resources>
    <string name="app_name">Laboratorio2</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="sintomas_dificultadR">¿Le ha faltado el aire o ha tenido dificultad para respirar?</string>
    <string name="sintomas_fatiga">¿Se ha sentido últimamente más fatigado de lo usual?</string>
    <string name="sintomas_fiebre">¿Ha tenido fiebre o temperatura mayor a 38*C en los últimos dias?</string>
    <string name="sintomas_tos">¿Ha tenido tos en los últimos dias?</string>
    <string name="sintomas_sentidos">¿Ha notado disminución del olfato o del sabor de los alimentos?</string>
    <string name="sintomas_cercania">¿Ha estado en contacto con alguien diagnosticado o sospechoso de covid-19 en los últimos días?</string>
    <string name="button">Enviar síntomas</string>
    <string name="capital" />
    <string name="tap_on_marker_instruction" />
    <string-array name="si_no">
        <item>Si</item>
        <item>No</item>
    </string-array>

</resources>